testsuite/tests/typecheck/should_fail/TcNoNullaryTC.hs
{-# LANGUAGE Haskell2010 #-}
module NoNullaryTC where

class A where
  f :: a -> a
